dataset1235/2025-2/2318198438/users/1301535012/executions/2601575092_3444416998.log
== SUBMISSION (2025-08-31 22:57:33)
-- CODE: 
expressao = (30 - (3 ** 2) + 8) // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME: 
0.02
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
30
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 22:57:36)
-- CODE: 
expressao = (30 - (3 ** 2) + 8) // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
30
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:00:03)
-- CODE: 
expressao = 30 - 3 ** 2 + 8) // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 30 - 3 ** 2 + 8) // 3 ** 2 * 10
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 30 - 3 ** 2 + 8) // 3 ** 2 * 10
                               ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 22:58:01)
-- CODE: 
expressao = (30 - (3 ** 2) + 8) // ((3 ** 2) * 10)
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 22:59:38)
-- CODE: 
expressao = ((30 - (3 ** 2)) + 8) // ((3 ** 2) * 10)
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:00:15)
-- CODE: 
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:00:06)
-- CODE: 
expressao = 30 - 3 ** 2 + 8) // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 30 - 3 ** 2 + 8) // 3 ** 2 * 10
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 30 - 3 ** 2 + 8) // 3 ** 2 * 10
                               ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 22:59:35)
-- CODE: 
expressao = ((30 - (3 ** 2)) + 8) // ((3 ** 2) * 10)
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 22:57:35)
-- CODE: 
expressao = (30 - (3 ** 2) + 8) // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
30
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 22:57:01)
-- CODE: 
expressao = (30 - 3 ** 2 + 8) // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
30
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 22:59:39)
-- CODE: 
expressao = ((30 - (3 ** 2)) + 8) // ((3 ** 2) * 10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
